feat: Update page title
Change the page title to a more encouraging message for students.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IOE K4 ĐỀ SỐ 08 - 2023-2024</title>
+    <title>IOE K4 ĐỀ SỐ 08 - Chúc các em làm bài tốt</title>
     
     <!-- Dependencies -->
     <script src="https://cdn.tailwindcss.com"></script>
