feat: Update welcome message
Change the subtitle on the welcome screen from the academic year to a motivational message.

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                         <div className="mb-8">
                             <div className="w-24 h-24 bg-blue-100 text-blue-600 rounded-3xl flex items-center justify-center mx-auto mb-6 text-4xl shadow-inner">📖</div>
                             <h1 className="text-3xl font-black text-slate-800 mb-2 tracking-tighter uppercase">IOE K4 ĐỀ SỐ 08</h1>
-                            <p className="text-slate-400 font-black uppercase text-xs tracking-[0.2em]">Năm học 2023 - 2024</p>
+                            <p className="text-slate-400 font-black uppercase text-xs tracking-[0.2em]">Chúc các em làm bài tốt</p>
                         </div>
                         <div className="space-y-6">
                             <input type="text" value={userName} onChange={(e) => setUserName(e.target.value)} placeholder="Nhập tên của bạn..." className="w-full p-5 bg-slate-50 border-2 border-slate-100 rounded-2xl text-xl font-bold focus:border-blue-500 outline-none transition-all shadow-inner" />
